# oxide-stream

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts  endpoints.ts  videos.ts
frontend/src/components/: BreadcrumbNav.tsx  VerificationGate.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/videos/: DeleteVideoDialog.tsx  VideoFileItem.tsx  VideoInfoDialog.tsx  VideoTable.tsx  VideoTableColumns.tsx
frontend/src/hooks/: useVideoPlayer.ts  useVideos.ts
src/: config.rs  main.rs  routers.rs  state.rs
src/videos/: mod.rs  routers.rs
src/videos/handlers/: delete.rs  detail_info.rs  info.rs  list.rs  mod.rs  stream.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx
web/src/api/: endpoints.ts  videos.ts
web/src/components/layout/: Header.tsx
web/src/components/ui/: data-table.tsx
web/src/components/videos/: VideoDetailInfoDialog.tsx  VideoPlayer.tsx
web/src/hooks/: useVideos.ts
web/src/lib/: utils.ts
