[package]
name = "oxide-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
blake3 = { version = "1.8.5" }
clap = { version = "4.6.2", features = ["derive", "env"] }
local-ip-address = { version = "0.6.13" }
mimalloc = { version = "0.1.52" }
mime_guess = { version = "2.0.5" }
rust-embed = { version = "8.12.0", features = ["axum-ex", "mime-guess"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3" }
tower-http = { version = "0.7.0", features = ["fs","validate-request"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ring = {version = "0.17.14"}
hex = {version = "0.4.3",features = ["serde"]}


[build-dependencies]
walkdir = { version = "2.5.0" }

[profile.release]
opt-level = 3          # 开启最高级别的代码优化
lto = "fat"            # 开启全局跨 Crate 链接时优化 (Fat LTO)，给 LLVM 最充分的全局优化空间
codegen-units = 1      # 限制代码生成单元为 1，减少并行编译以换取更激进的跨模块内联与优化
panic = "abort"        # 发生 panic 时直接终止程序而非展开栈 (unwind)，移除栈回溯代码并提升性能
strip = true           # 剥离符号表和调试信息，减小二进制体积（不影响速度，但利于缓存）